[package]
name        = "valenx-bioseq"
description = "Biological-sequence core for Valenx. Native Rust replacement for the sequence-handling portion of Biopython / BioJava / SeqKit / ApE / SerialCloner / pLannotate / pydna: IUPAC alphabets, Seq / SeqRecord / SeqFeature data models, FASTA / FASTQ / GenBank / EMBL I/O, reverse complement, transcription, translation across NCBI codon tables, ORF finding, GC / k-mer / Tm / molecular-weight / ProtParam analysis, restriction digest + virtual gel, plasmid annotation, codon optimization, primer design and in-silico PCR. Pure parsing + algorithms, no neural-network weights."

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true

[dependencies]
# Pure parsing + algorithms — only the data-model derive helpers, no
# heavy or platform-specific dependencies.
serde = { workspace = true }

# Pure-Rust genomic file formats (no C htslib). Adds native variant-call
# (VCF) and alignment (SAM) parsing on top of this crate's in-house
# FASTA/FASTQ/GenBank/EMBL readers. Text formats only — the
# bgzf-compressed BAM/BCF variants are intentionally not pulled in.
#
# Versions are pinned to the newest releases that still honour the
# workspace MSRV (1.88); noodles 0.88+/sam 0.85+ require rustc 1.89.
noodles-vcf = { version = "=0.87.0", default-features = false }
noodles-sam = { version = "=0.84.0", default-features = false }

[lints.rust]
unused_imports = "warn"
missing_docs   = "warn"
